# snow-compare

./: .gitignore  pyproject.toml
snow_compare/: cli.py  sql_builder.py
snow_compare.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_sql_builder.py
