[project]
name = "snow-compare"
version = "0.1.0"
description = "A tiny CLI that generates Snowflake table comparison SQL for data engineers."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0"
]

[project.scripts]
snow-compare = "snow_compare.cli:app"

[build-system]
requires = ["setuptools>=69.0.0"]
build-backend = "setuptools.build_meta"